--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "chartkick": "^3.2.1",
+    "highcharts": "^9.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "stimulus": "^2.0.0",
