--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "highcharts": "^9.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "sortablejs": "^1.13.0",
     "stimulus": "^2.0.0",
     "turbolinks": "^5.2.0"
   },
